[project]
name = "dl-mlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.9.2",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "scikeras>=0.13.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
